fix(docs): scrollbar fix
Bottom scroll is too big

--- a/assets/css/_general.scss
+++ b/assets/css/_general.scss
@@ -13,7 +13,8 @@ body {
   }
   
   &::-webkit-scrollbar, *::-webkit-scrollbar {
-    width: 4px;
+    width: 5px;
+    height: 5px;
     background-color: $gray-500;
   }
   
